individual stub pages for docs using autosummary

--- a/documentation/source/_static/custom.css
+++ b/documentation/source/_static/custom.css
@@ -1,7 +1,9 @@
-:target{
-    background-color:lightyellow;
+/* highlight headings for links */
+:target h2{
+    background-color: #FAF3E8;
 }
 
-dl.py{
-  margin-bottom: 15px;
+/* autosummary table widths consistent */
+table.align-default {
+    width: 98%;
 }
