Update cheatsheet for api differences in V0.3.0
Specifically, the removal of returnType as a required parameter,
the expansion of cross validation to the hyperparameter tuning
stack, and chanes to the learning function signatures.
Formatting has been generally improved, including as required
by the above changes.

--- a/documentation/source/_static/cheatsheet.css
+++ b/documentation/source/_static/cheatsheet.css
@@ -181,7 +181,7 @@ div.body .inplace {
 }
 
 #image {
-  text-align: center;
+  text-align: left;
   margin-bottom: 4px;
   margin-right: 4px;
 }
@@ -210,12 +210,12 @@ div.body .inplace {
 }
 
 #info {
-  width: 264px;
+  width: 266px;
   height: 280px;
 }
 
 #vizAndIter {
-  width: 522px;
+  width: 520px;
 }
 
 #visualization {
@@ -263,11 +263,11 @@ div.body .inplace {
 }
 
 #ml-left {
-  width: 408px;
+  width: 385px;
 }
 
 #ml-right {
-  width: 380px;
+  width: 403px;
 }
 
 #training {
